Project converted to Java 17