@@ -112,7 +112,7 @@ public class DB2Test extends BaseAdditionalDatabaseTest {
     executableDetails.setSchemaCrawlerOptions(schemaCrawlerOptions);
     executableDetails.setAdditionalConfiguration(config);
 
-    final String expectedResource = String.format("testDB2WithConnection.%s.txt", javaVersion());
+    final String expectedResource = "testDB2WithConnection.%s.txt".formatted(javaVersion());
     assertThat(
         outputOf(executableExecution(getDataSource(), executableDetails)),
         hasSameContentAs(classpathResource(expectedResource)));
