@@ -6,7 +6,6 @@
  * SPDX-License-Identifier: EPL-2.0
  */
 
-
 package schemacrawler.integration.test;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -21,10 +20,8 @@ import java.nio.file.Path;
 import java.sql.Connection;
 import java.util.HashMap;
 import java.util.Map;
-
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-
 import schemacrawler.Main;
 import schemacrawler.schemacrawler.InfoLevel;
 import schemacrawler.test.utility.BaseSqliteTest;
@@ -76,7 +73,7 @@ public class SqliteDistributionTest extends BaseSqliteTest {
       Main.main(flattenCommandlineArgs(argsMap));
     }
     final String expectedResource =
-        String.format("sqlite.main.%s.%s", javaVersion(), outputFormat.getFormat());
+        "sqlite.main.%s.%s".formatted(javaVersion(), outputFormat.getFormat());
     assertThat(outputOf(testout), hasSameContentAs(classpathResource(expectedResource)));
   }
 }
